--- a/Intelligent_Banking_Operations_Agent/frontend/index.html
+++ b/Intelligent_Banking_Operations_Agent/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/dnb-logo.svg" />
     <title>Intelligent Banking Operations Agent</title>
   </head>
   <body class="bg-[rgb(11,14,18)] text-[rgb(229,231,235)]">
